# The_Examiner

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
api/: classify.ts  examine.ts  tsconfig.json  tsconfig.tsbuildinfo
backend/: .env.example  main.py  pyproject.toml
src/: App.tsx  index.css
src/agents/: classifier.ts  codeExaminer.ts  designExaminer.ts  gapAnalyst.ts  genericExaminer.ts  orchestrator.ts  paperExaminer.ts  teacher.ts  types.ts
src/components/: ArchivePanel.tsx  ConceptCard.tsx  ExamPanel.tsx  GapMapPanel.tsx  Onboarding.tsx  PastePanel.tsx  RoundIndicator.tsx  Sidebar.tsx  TeachBlock.tsx
src/hooks/: useExamStream.ts  usePersistence.ts
src/lib/: llm.ts
src/state/: examReducer.ts  types.ts
src/utils/: parseGapEval.ts
